# storage/api-docs/api-docs.json
@@ -931,12 +931,7 @@
                             }
                         }
                     }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
+                }
             }
         },
         "/update-profile": {
